--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -812,6 +812,8 @@
     "updateHistoryLang": "업데이트 내역",
     "noticeLang": "공지",
     "apiDocumentationLang": "API 문서",
+
+    "User not found": "사용자를 찾을 수 없습니다!",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
