--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -818,6 +818,126 @@
     "Please login first!": "Please login first!",
     "Please login again!": "Please login again!",
 
+    "Lower Agent": "Lower Agent",
+    "New Agent": "New Agent",
+    "User List": "User List",
+    "DASHBOARD": "DASHBOARD",
+    "Dashboard": "Dashboard",
+    "MY PAGE": "MY PAGE",
+    "AGENT": "AGENT",
+    "Credit History": "Credit History",
+    "Agent List": "Agent List",
+    "Back Office": "Back Office",
+    "Minigame Bet Ratio": "Minigame Bet Ratio",
+    "Slot Bet Ratio": "Slot Bet Ratio",
+    "Sport Bet Ratio": "Sport Bet Ratio",
+    "Casino Bet Ratio": "Casino Bet Ratio",
+    "Current Reserve Amount": "Current Reserve Amount",
+    "Gold Day Bet": "Today Bet",
+    "Gold Day Bet User": "Today Bet User",
+    "Gold Day Win": "Today Win",
+    "Gold Day Loss": "Today Loss",
+    "Number": "Number",
+    "Exibition Name": "Agent Name",
+    "ID": "ID",
+    "Password": "Password",
+    "Level": "Level",
+    "API Key": "API Key",
+    "Callback URL": "Callback URL",
+    "White IP": "White IP",
+    "Fee Rate": "Fee Rate",
+    "Lower User Count": "Lower User Count",
+    "Sub Exibition Number": "Sub Exibition Number",
+    "Total Holdings": "Total Holdings",
+    "Registered Date Time": "Registered Date Time",
+    "* Description.": "* Description.",
+    "Basic information of your account.": "Basic information of your account.",
+    "Overall": "Overall",
+    "Submit": "Submit",
+    "Username": "Username",
+    "Levels": "Levels",
+    "Agent": "Agent",
+    "Current Holding Amount": "Current Holding Amount",
+    "Number of Users": "Number of Users",
+    "Client fee amount received": "Client fee amount received",
+    "Status": "Status",
+    "Action": "Action",
+    "LEVEL": "LEVEL",
+    "ACTIVE": "ACTIVE",
+    "INACTIVE": "INACTIVE",
+    "AGENT DETAILS": "AGENT DETAILS",
+    "Basic information of agent account.": "Basic information of agent account.",
+    "Agent Name": "Agent Name",
+    "CREDIT PAYMENT": "Increase Agent Balance",
+    "Credit Payment": "Increase Agent Balance",
+    "PAYBACK": "Agent Balance Reduction",
+    "Payback": "Agent Balance Reduction",
+    "Reserves": "Reserves",
+    "ADD": "ADD",
+    "CANCEL": "CANCEL",
+    "NORMAL": "NORMAL",
+    "STOP": "STOP",
+    "ADD NEW AGENT": "ADD NEW AGENT",
+    "Agent Username": "Agent Username",
+    "Agent Password": "Agent Password",
+    "Agent Email": "Agent Email",
+    "Agent Nickname": "Agent Nickname",
+    "Agent Parentid": "Agent Parentid",
+    "Agent Share": "Agent Share",
+    "Agent Key": "Agent Key",
+    "Agent Host": "Seamless API",
+    "Agent Token": "Agent Token",
+    "Agent Level": "Agent Level",
+    "Agent Whitelist IP": "Agent Whitelist IP",
+    "First Name": "First Name",
+    "Last Name": "Last Name",
+    "Last Login Date Time": "Last Login Date Time",
+    "Registered IP": "Registered IP",
+    "Last Login IP": "Last Login IP",
+    "GAMES": "GAMES",
+    "Betting History": "Betting History",
+    "Game Settings": "Game Settings",
+    "Vendor Settings": "Vendor Settings",
+    "SETTLEMENT": "SETTLEMENT",
+    "My Revenue List": "My Revenue List",
+    "Revenue List by Game": "Revenue List by Game",
+    "Lower Agent Revenue List": "Lower Agent Revenue List",
+    "Revenue List By Game": "Revenue List By Game",
+    "OTHERS": "OTHERS",
+    "Update History": "Update History",
+    "API Documentation": "API Documentation",
+    "Notice": "Notice",
+    "Token": "Token",
+    "Today Betting Amount": "Today Betting Amount",
+    "Today Net Loss": "Today Net Loss",
+    "Cash Type": "Cash Type",
+    "Amount": "Amount",
+    "Cash Before": "Cash Before",
+    "Cash After": "Cash After",
+    "Date Time": "Date Time",
+    "IP": "IP",
+    "Betting History List": "Betting History List",
+    "Transaction ID": "Transaction ID",
+    "Game Type": "Game Type",
+    "Table ID": "Table ID",
+    "Type": "Type",
+    "Agent ID": "Agent ID",
+    "Credit History List": "Credit History List",
+    "Up Agent ID": "Up Agent ID",
+    "Date": "Date",
+    "Bet Amount Sum": "Bet Amount Sum",
+    "Result Amount Sum": "Result Amount Sum",
+    "Tie Betting": "Tie Betting",
+    "Win Loss": "Win Loss",
+    "Bet Return Rate": "Bet Return ate",
+    "Lower Agent Name": "Lower Agent Name",
+    "Game Vendor": "Game Vendor",
+    "User ID" : "User ID",
+    "Parent Agent ID" : "Parent Agent ID",
+    "SAVE" : "SAVE",
+    "Lower Agent Count" : "Lower Agent Count",
+    "Seamless API URL": "Seamless API URL",
+
     "totalPageLang": "Total Page",
     "loginError Lang!": "Login Failed!"
 }
