--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -814,6 +814,133 @@
     "apiDocumentationLang": "API 문서",
 
     "User not found": "사용자를 찾을 수 없습니다!",
+
+	"Lower Agent": "하위 에이전트",
+	"New Agent": "신규 에이전트",
+	"User List": "에이전트 유저 목록",
+	"DASHBOARD": "대시보드",
+	"Dashboard": "대시보드",
+  
+	"AGENT": "에이전트",
+	"Credit History": "에이전트 보유금 기록",
+	"Agent List": "에이전트 목록",
+	"Back Office": "백 오피스",
+  
+	"Current Reserve Amount": "현재 보유 금액",
+	"Gold Day Bet": "금일 베팅금",
+	"Gold Day Bet User": "금일 베팅 유저수",
+	"Gold Day Win": "금일 당첨금",
+	"Gold Day Loss": "금일 손익금",
+	"Casino Bet Ratio": "카지노 베팅 비율",
+	"Slot Bet Ratio": "슬롯 베팅 비율",
+	"Sport Bet Ratio": "스포츠 베팅 비율",
+	"Minigame Bet Ratio": "미니게임 베팅 비율",
+  
+	"MY PAGE": "내 정보",
+	"Basic information of your account.": "기본 에이전트 정보",
+	"Number": "IDX",
+	"Agent Name": "에이전트 이름",
+	"Exibition Name": "에이전트 이름",
+	"ID": "에이전트 아이디",
+	"Password": "에이전트 비밀번호",
+	"Level": "레벨",
+	"API Key": "API 키",
+	"Callback URL": "Seamless Api Url",
+	"White IP": "화이트 IP",
+	"Fee Rate": "알 수수료율",
+	"Lower User Count": "하부 전체 유저수",
+	"Sub Exibition Number": "하부 에이전트 수",
+	"Total Holdings": "총 보유 금액",
+	"Registered Date Time": "가입날짜",
+	"* Description.": "* 설명.",
+  
+	"Overall": "전체",
+	"Submit": "제출",
+	"Username": "사용자 이름",
+	"Levels": "레벨",
+	"Agent": "에이전트",
+	"Current Holding Amount": "보유 금액",
+	"Number of Users": "유저 수",
+	"Client fee amount received": "수수료 금액",
+	"Status": "상태",
+	"Action": "관리",
+	"LEVEL": "레벨",
+	"ACTIVE": "활성",
+	"INACTIVE": "비활성",
+	"AGENT DETAILS": "에이전트 세부 정보",
+	"Basic information of agent account.": "에이전트 기본 정보.",
+  
+	"CREDIT PAYMENT": "에이전트 보유금 충전",
+	"Credit Payment": "에이전트 보유금 충전",
+	"PAYBACK": "에이전트 보유금 환전",
+	"Payback": "에이전트 보유금 환전",
+	"Reserves": "예약",
+	"ADD": "추가",
+	"CANCEL": "취소",
+	"NORMAL": "정상",
+	"STOP": "정지",
+	"ADD NEW AGENT": "새 에이전트 추가",
+	"Agent Username": "에이전트 아이디",
+	"Agent Password": "에이전트 비밀번호",
+	"Agent Email": "에이전트 이메일",
+	"Agent Nickname": "에이전트 이름",
+	"Agent Parentid": "상위 에이전트 ID",
+	"Agent Share": "알 수수료율",
+	"Agent Key": "에이전트 API KEY",
+	"Agent Host": "Seamless API URL",
+	"Agent Token": "에이전트 API 토큰",
+	"Agent Level": "에이전트 레벨",
+	"Agent Whitelist IP": "에이전트 화이트리스트 IP",
+	"First Name": "이름",
+	"Last Name": "성",
+	"Last Login Date Time": "마지막 로그인 날짜",
+	"Registered IP": "가입 IP",
+	"Last Login IP": "마지막 로그인 IP",
+	"GAMES": "게임",
+	"Betting History": "베팅 기록",
+	"Game Settings": "게임 설정",
+	"Vendor Settings": "벤더사 설정",
+	"SETTLEMENT": "정산",
+	"My Revenue List": "내 수익 리스트",
+	"Lower Agent Revenue List": "하부 에이전트 수익 리스트",
+	"Revenue List By Game": "게임별 수익 목록",
+	"OTHERS": "기타",
+	"Update History": "업데이트 내역",
+	"API Documentation": "API 문서",
+	"Notice": "공지",
+	"Token": "API 토큰",
+	"Today Betting Amount": "금일 베팅 금액",
+	"Today Net Loss": "금일 손익 금액",
+	"Cash Type": "현금 유형",
+	"Amount": "금액",
+	"Cash Before": "이전 보유금",
+	"Cash After": "이후 보유금",
+	"Date Time": "날짜 및 시간",
+	"IP": "IP",
+	"Betting History List": "베팅 기록 목록",
+	"Transaction ID": "거래 ID",
+	"Game Type": "게임 유형",
+	"Table ID": "테이블 ID",
+	"Type": "유형",
+	"Agent ID": "에이전트 ID",
+	"Credit History List": "에이전트 보유금 기록",
+	"Up Agent ID": "상부 에이전트 ID",
+  
+	"Date": "일자",
+	"Bet Amount Sum": "베팅금액",
+	"Result Amount Sum": "당첨금액",
+	"Tie Betting": "무승부금액",
+	"Win Loss": "손익",
+	"Bet Return Rate": "베팅환수율",
+  
+	"Lower Agent Name": "하부 에이전트 이름",
+	"Game Vendor": "게임 공급업체",
+	"Revenue List by Game": "게임별 수익 목록",
+	"User ID": "사용자 ID",
+	"Parent Agent ID": "상위 에이전트 ID",
+	"SAVE": "저장",
+	"Lower Agent Count": "하부 에이전트 수",
+	"Seamless API URL": "Seamless API URL",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
