--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -945,19 +945,23 @@
     "Invalid parameter agent_share : ": "Invalid Agent Share",
     "Invalid parameter username": "Invalid Username",
     "Invalid parameter filter_agentid : ": "Invalid Agent ID",
-
+    
     "addLevelLang": "Add Level",
-
+    
     "Invalid parameter agent_white_ip : ": "Invalid Agent White IP",
     "Invalid parameter settings": "Invalid Parameter: Settings",
     "Expired token": "Expired Token!",
     "User no list": "No results found",
-
+    
     "FAILED": "FAILED",
     "Invalid Game ID": "Invalid Game ID!",
     "Invalid parameter filter_game_id : ": "Invalid Game ID!",
-
+    
     "Amount must be greater than 0 (zero)": "Amount must be greater than 0 (zero)",
+    
+    "Invalid parameter filter_agentid": "Invalid Agent ID",
+    "Your upper agent doesn't have enough balance.": "Your upper agent doesn't have enough balance.",
+    "Upper Agent Balance": "Upper Agent Balance",
 
     "totalPageLang": "Total Page",
     "loginError Lang!": "Login Failed!"
