--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -966,6 +966,8 @@
     "gameDeliverSettingsLang" : "Game Delivery Settngs",
     "gameOfferingListLang" : "Game Offering List",
 
+    "Bet History - Sport" : "Bet History - Sport",
+
     "totalPageLang": "Total Page",
     "loginError Lang!": "Login Failed!"
 }
