prepare bet deets

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -220,7 +220,7 @@
     "filterStatusLang": "Filter Status",
     "rejectLang": "Reject",
     "blockLang": "Block",
-    "detailLang": "Detail",
+    "detailLang": "Details",
     "searchByLang": "Search by",
     "activeLang": "Active",
     "blockedLang": "Blocked",
