--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -425,7 +425,7 @@
     "siteIconLang": "Site Icon",
     "siteLogoLang": "Site Logo",
 
-    "allowAddPartnerLang": "Allow Add Partner",
+    "allowAddPartnerLang": "Allow Add Agents",
 
     "minimum_deposit_amount": "Minimum Deposit Amount",
     "maximum_deposit_amount": "Maximum Deposit Amount",
@@ -967,6 +967,32 @@
     "gameOfferingListLang" : "Game Offering List",
 
     "Bet History - Sport" : "Bet History - Sport",
+
+    "Top Agent Name" : "Up Agent Name",
+    "Number of Bettors" : "Number of Bettors",
+    "Invalid parameter agent_username : " : "Invalid Agent Username",
+    "Reserve ID" : "Reserve ID",
+    "Purchase ID" : "Purchase ID",
+    "Bet Type" : "Bet Type",
+    "Live" : "Live",
+    "Not Live" : "Not Live",
+    "expectedAmountLang" : "Expected Amount",
+    "winningAmountLang" : "Winning Amount",
+    "Odds Total" : "Odds Total",
+    "Bet ID" : "Bet ID",
+    "Live?" : "Live?",
+    "Sport" : "Sport",
+    "League" : "League",
+    "Match Name" : "Match Name",
+    "Home" : "Home",
+    "Score" : "Score",
+    "Betting Score" : "Betting Score",
+    "Away" : "Away",
+    "Betting Name" : "Betting Name",
+    "Bet Value" : "Bet Value",
+    "Allocation" : "Allocation",
+    "Benchmark" : "Benchmark",
+    "Opened" : "Opened",
 
     "totalPageLang": "Total Page",
     "loginError Lang!": "Login Failed!"
