--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -994,6 +994,9 @@
     "Benchmark" : "Benchmark",
     "Opened" : "Opened",
 
+    "Winnings" : "Winnings",
+    "Bet Details" : "Bet Details",
+
     "totalPageLang": "Total Page",
     "loginError Lang!": "Login Failed!"
 }
