--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -978,27 +978,27 @@
 	"Top Agent Name" : "최고 상담원 이름",
 	"Number of Bettors": "베팅자 수",
     "Invalid parameter agent_username : ": "잘못된 상담원 사용자 이름",
-    "Reserve ID": "예약 ID",
+    "Reserve ID": "구매ID",
     "Purchase ID": "구매 ID",
     "Bet Type": "베팅종류",
-    "Live": "라이브 유무",
+    "Live": "라이브",
     "Not Live": "실시간 아님",
     "expectedAmountLang": "예상 금액",
     "winningAmountLang": "당첨 금액",
     "Odds Total": "배당",
     "Bet ID": "베팅 ID",
-    "Live?": "라이브 유무",
-    "Sport": "스포츠",
+    "Live?": "라이브여부",
+    "Sport": "종목",
     "League": "리그",
     "Match Name": "경기명",
     "Home": "홈",
-    "Score": "점수",
-    "Betting Score": "베팅 점수",
+    "Score": "최종스코어",
+    "Betting Score": "베팅시점스코어",
     "Away": "원정",
     "Betting Name": "베팅 이름",
     "Bet Value": "베팅 값",
-    "Allocation": "할당",
-    "Benchmark": "벤치마크",
+    "Allocation": "배당",
+    "Benchmark": "기준점",
 	"Opened" : "개설됨",
 
 	"Winnings" : "당첨금",
@@ -1007,10 +1007,16 @@
     "Lost": "패배",
     "Won": "승리",
     "Canceled": "취소됨",
-    "Cashout": "현금 인출",
+    "Cashout": "캐시아웃",
     "Half Lost": "반 패배",
 	"Edit": "편집",
     "All Games": "모든 게임",
+
+    "Result": "결과",
+    "Prematch": "프리매치",
+    "Live or Not": "라이브 여부",
+    "Select result": "결과 선택",
+    "All": "모두",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
