--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -975,14 +975,14 @@
 
 	"Bet History - Sport" : "베팅 내역 - Sport",
 
-	"Top Agent Name" : "최고 상담원 이름",
+	"Top Agent Name" : "상위 에이전트명",
 	"Number of Bettors": "베팅자 수",
     "Invalid parameter agent_username : ": "잘못된 상담원 사용자 이름",
     "Reserve ID": "구매ID",
     "Purchase ID": "구매 ID",
     "Bet Type": "베팅종류",
     "Live": "라이브",
-    "Not Live": "실시간 아님",
+    "Not Live": "프리매치",
     "expectedAmountLang": "예상 금액",
     "winningAmountLang": "당첨 금액",
     "Odds Total": "배당",
@@ -995,7 +995,7 @@
     "Score": "최종스코어",
     "Betting Score": "베팅시점스코어",
     "Away": "원정",
-    "Betting Name": "베팅 이름",
+    "Betting Name": "회원 배팅명",
     "Bet Value": "베팅 값",
     "Allocation": "배당",
     "Benchmark": "기준점",
