--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -109,7 +109,7 @@
 	"minigameRouletteListLang": "미니게임 룰렛 목록",
 	"addRouletteLang": "룰렛 추가",
 	"addMinigameLang": "미니게임 추가",
-	"selectpartnerLang": "총판 선택",
+	"selectpartnerLang": "에이전트 선택",
 	"selectstatusLang": "상태 선택",
 	"statusLang": "상태",
 	"showLang": "표시",
