--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -221,7 +221,7 @@
 	"rejectLang": "거부",
 	"blockLang": "차단",
 	"detailLang": "세부정보",
-	"searchByLang": "에이전트ID",
+	"searchByLang": "검색 기준",
 	"activeLang": "활성",
 	"blockedLang": "차단됨",
   
