--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1027,6 +1027,8 @@
     "Evolution": "에볼루션",
     "Pragmatic": "프라그마틱",
     "Ava": "Ava",
+
+    "Game Date": "경기날짜",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
