--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1029,6 +1029,8 @@
     "Ava": "Ava",
 
     "Game Date": "경기날짜",
+
+    "Tie": "무승부",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
