--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1033,6 +1033,19 @@
     "Tie": "무승부",
     "Draw": "무",
     "Half Won": "하프 승",
+
+    "Game ID": "게임ID",
+    "Provider": "제공회사",
+    "Table Information": "테이블정보",
+
+	"Game Result":"게임결과",
+	"Banker":"뱅커",
+	"Player":"플레이어",
+
+	"Bet Code":"배팅코드",
+	"Bet Amount":"베팅금",
+	"Bet Time":"베팅시각",
+	"Bet Position":"베팅위치",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
