mpdify bet count

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1059,7 +1059,7 @@
 
 	"already processed":"이미 처리됨",
 
-	"Better Count":"베팅유저수",
+	"Bettor Count":"베팅유저수",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
