add provider column

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1060,6 +1060,7 @@
 	"already processed":"이미 처리됨",
 
 	"Bettor Count":"베팅유저수",
+	"Vendor":"벤더사",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
