add micro on settlement

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1076,6 +1076,8 @@
 	"Reference": "참조",
 	"Round Details": "라운드 세부 정보",
 	"Provider ID": "제공자 ID",
+
+	"Microgaming": "마이크로게이밍",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
