--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1078,6 +1078,7 @@
 	"Provider ID": "제공자 ID",
 
 	"Microgaming": "마이크로게이밍",
+	"BTI Result": "Bti결과",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
