--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -978,7 +978,7 @@
 	"Bet History - MiniGame" : "베팅 내역 - MiniGame",
 	"Bet History - Sport" : "베팅 내역 - Sport",
 
-	"Top Agent Name" : "상위 에이전트명",
+	"Top Agent Name" : "상위 에이전트 아이디",
 	"Number of Bettors": "베팅자 수",
     "Invalid parameter agent_username : ": "잘못된 상담원 사용자 이름",
     "Reserve ID": "구매ID",
