--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1085,6 +1085,8 @@
 	"This month Win": "이달 당첨금",
 	"This month Loss": "이달 손익금",
 	"This month Bet User": "이달 베팅 유저수",
+	
+	"User Revenue List": "유저 수익 목록",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
