--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -901,7 +901,6 @@
 	"Last Login IP": "마지막 로그인 IP",
 	"GAMES": "게임",
 	"Betting History": "베팅 기록",
-	"Game Settings": "게임 설정",
 	"Vendor Settings": "벤더사 점검설정",
 	"SETTLEMENT": "정산",
 	"My Revenue List": "내 수익 리스트",
@@ -1087,6 +1086,15 @@
 	"This month Bet User": "이달 베팅 유저수",
 	
 	"User Revenue List": "유저 수익 목록",
+
+	"Bet History" : "베팅내역",
+	"Game Settings" : "게임설정",
+	"Vendor Bet Limit" : "벤더사 BetLimit",
+	"Settings" : "설정",
+	"Vendor Betting Limit" : "벤더사 베팅리미트",
+	"Bet Limit" : "베팅 한도",
+	"MIN" : "MIN",
+	"MAX" : "MAX",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
