change text limit

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1097,6 +1097,8 @@
 	"MAX" : "MAX",
 
 	"Bet Limit Settings" : "베팅 리미트 설정",
+
+	"Set" : "설정",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
