change translation reserve purchase id

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -980,8 +980,8 @@
 	"Top Agent Name" : "상위 에이전트 아이디",
 	"Number of Bettors": "베팅자 수",
     "Invalid parameter agent_username : ": "잘못된 상담원 사용자 이름",
-    "Reserve ID": "예약 ID",
-    "Purchase ID": "구매 ID",
+    "Reserve ID": "배팅ID",
+    "Purchase ID": "구매ID",
     "Bet Type": "베팅종류",
     "Live": "라이브",
     "Not Live": "프리매치",
