--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1112,7 +1112,7 @@
 	"Send Result": "결과 보내기",
 	"Sum": "합계",
 	"Winning": "당첨",
-	"Profit & Loss": "당첨",
+	"Profit & Loss": "손익",
 	"Total Unsettled": "미정산합계",
 	"Pending Bet": "대기중 베팅",
 	"Expected Winning": "예상당첨",
