updates on sports market page

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1126,6 +1126,8 @@
 	"Winning Amount": "당첨금액",
 
 	"Market": "마켓",
+
+	"Bet Total": "배팅합계",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
