add sorting asc desc

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1128,6 +1128,8 @@
 	"Market": "마켓",
 
 	"Bet Total": "배팅합계",
+
+	"Game Name": "경기명",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
