update sports by market page, integrate api

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1130,6 +1130,7 @@
 	"Bet Total": "배팅합계",
 
 	"Game Name": "경기명",
+	"Detailed Market": "상세 마켓",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
