modify status and live select

--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1123,6 +1123,8 @@
 	"Sort by": "정렬",
 	"Expected Amount": "예상 금액",
 	"Winning Amount": "당첨금액",
+
+	"Multiple Bet": "다중 베팅",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
