--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1131,6 +1131,8 @@
 
 	"Game Name": "경기명",
 	"Detailed Market": "상세 마켓",
+
+	"Error Credit History List": "오류 신용 기록 목록",
   
 	"totalPageLang": "전체",
 	"loginError Lang!": "로그인 실패!"
